# btrfs2s3

./: .gitignore  .gitlab-ci.yml  .mdformat.toml  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  example-config.yaml  example.yaml  license-header.txt  pyproject.toml  setup.cfg  test-requirements.txt  tox.ini  yamlfmt.yaml
.github/workflows/: publish.yaml  tests.yaml
src/btrfs2s3/: __init__.py  action.py  arrowutil.py  assessor.py  backups.py  config.py  console.py  intervals.py  main.py  preservation.py  resolver.py  retention.py  s3.py  schedule.py  snapshots.py  stream_uploader.py  subvols.py  subvolutil.py  thunk.py  times.py  util.py  zoneinfo.py
src/btrfs2s3/_internal/: __init__.py  action.py  arrowutil.py  assessor.py  backups.py  btrfsioctl.py  config.py  console.py  cost.py  cvar.py  durations.py  main.py  piper.py  planner.py  preservation.py  resolver.py  s3.py  stream_uploader.py  thunk.py  time_span_describer.py  util.py  zoneinfo.py
src/btrfs2s3/_internal/commands/: __init__.py  printing.py  shared.py  update.py  update2.py
src/btrfs2s3/commands/: __init__.py  run.py  update.py
tests/: config_test.py  conftest.py  cost_fixtures.py  test_intervals.py
tests/_internal/arrowutil/: humanize_span_test.py  iter_intersecting_time_spans_test.py  iter_time_spans_test.py
tests/_internal/btrfsioctl/: get_subvol_info_test.py  send_test.py  snap_create_v2_test.py  snap_destroy_v2_test.py  subvol_create_v2_test.py
tests/action/: action_test.py  create_backup_test.py  create_snapshot_test.py  delete_backups_test.py  delete_snapshot_test.py  plan_test.py  rename_snapshot_test.py
tests/arrowutil/: test_iter_intervals.py
tests/assessor/: assess_test.py
tests/backups/: path_test.py
tests/commands/: help_test.py  run_test.py
tests/commands/run/: describe_time_span_test.py  invocation_test.py  print_actions_test.py  print_actions_test.py::test_print_actions[3-3-3-3-3].golden  print_assessment_test.py  print_assessment_test.py::test_backup_without_snapshot.golden  print_assessment_test.py::test_print_assessment.golden
tests/commands/update/: describe_time_span_test.py  invocation_test.py  invocation_test.py::test_refuse_to_run_unattended_without_pretend_or_force[Impl.Update2].golden  print_actions_test.py  print_assessment_test.py  print_assessment_test.py::test_backup_without_snapshot.golden  print_assessment_test.py::test_dont_keep.golden  print_assessment_test.py::test_most_recent.golden  print_assessment_test.py::test_new_proposed.golden  print_assessment_test.py::test_print_assessment.golden  print_assessment_test.py::test_send_ancestor.golden
tests/commands/update2/: __init__.py  invocation_test.py  print_plan_test.py  print_plan_test.py::test_alternate_keep_meta[delete].golden  print_plan_test.py::test_alternate_keep_meta[force_terminal-delete].golden  print_plan_test.py::test_alternate_keep_meta[mostrecent].golden  print_plan_test.py::test_alternate_keep_meta[mostrecentnew].golden  print_plan_test.py::test_alternate_keep_meta[no_force_terminal-delete].golden  print_plan_test.py::test_alternate_keep_meta[no_force_terminal-mostrecent].golden  print_plan_test.py::test_alternate_keep_meta[no_force_terminal-mostrecentnew].golden  print_plan_test.py::test_print_plan.golden  print_plan_test.py::test_print_plan[force_terminal].golden  print_plan_test.py::test_send_ancestor.golden  print_plan_test.py::test_send_ancestor[force_terminal].golden
tests/durations/: parse_test.py
tests/intervals/: test_day.py  test_hour.py  test_iter_range.py  test_minute.py  test_month.py  test_second.py  test_str.py  test_year.py
tests/piper/: filter_pipe_test.py
tests/planner/: __init__.py  actions_test.py  assess_test.py  assess_with_actions_integration_test.py  plan_test.py  remote_test.py  snapshot_dir_test.py  source_test.py
tests/preservation/: params_test.py  policy_test.py
tests/resolver/: index_test.py  keep_backup_of_snapshot_test.py  keep_most_recent_snapshot_test.py  keep_send_ancestors_of_backups_test.py  keep_snapshot_and_backup_for_time_span_test.py  marker_test.py  resolve_test.py  test_index.py  test_resolve.py
tests/retention/: params_test.py  policy_test.py
tests/s3/: costs_test.py  iter_backups_test.py  timespan_test.py
tests/stream_uploader/: conftest.py  iter_parts_test.py  upload_non_seekable_stream_via_tempfile_test.py
tests/subvols/: test_subvol.py
tests/thunk/: thunk_test.py
tests/time_span_describer/: describe_time_span_test.py
typeshed/: btrfsutil.pyi
