[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=64",
  "setuptools-scm>=8",
]

[project]
name = "btrfs2s3"
description = "Snapshot btrfs volumes and back them up to s3"
authors = [
  { name = "Steven Brudenell", email = "steven.brudenell@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dynamic = [
  "version",
]
dependencies = [
  "arrow>=1",
  "boto3[crt]",
  "rich",
  "typing-extensions>=4.4",
  "tzdata",
]
scripts.btrfs2s3 = "btrfs2s3.main:main"

[tool.setuptools_scm]

[tool.ruff]
format.skip-magic-trailing-comma = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101",
  "ANN102",
  "COM812",
  "ISC001",
]
lint.per-file-ignores."src/btrfs2s3/_internal/*" = [
  "PLR",
]
lint.per-file-ignores."src/btrfs2s3/assessor.py" = [
  "D",
]
lint.per-file-ignores."src/btrfs2s3/commands/*" = [
  "T",
]
lint.per-file-ignores."src/btrfs2s3/resolver.py" = [
  "D",
]
lint.per-file-ignores."tests/*" = [
  "D",
  "PLR",
  "S",
  "SLF",
]
lint.per-file-ignores."typeshed/*" = [
  "A",
]
lint.isort.force-single-line = true
lint.isort.force-sort-within-sections = true
lint.isort.order-by-type = false
lint.pydocstyle.convention = "google"

[tool.mypy]
mypy_path = "typeshed"
strict = true
